--- a/css/styles.css
+++ b/css/styles.css
@@ -10947,7 +10947,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/ben-10-alien-x-minimalism-hd-wallpaper-preview.jpg");
+  background-image: url("../assets/img/fotos-do-ben-10-dfrk2fyznplocesa.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -11001,7 +11001,7 @@ header.masthead .masthead-heading {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(255, 200, 0, 0.9);
+  background: green;
   align-items: center;
   justify-content: center;
   opacity: 0;
